Fix spacing issues caused by therapy 3rd col removal

--- a/_sass/therapy.sass
+++ b/_sass/therapy.sass
@@ -2,7 +2,13 @@
 	background-color: $white
 	padding-top: 30px
 
+.therapy-text-content
+	margin-right: 40px
+
 @media (max-width: 1199px) 
+	.therapy-text-content
+		margin-left: 40px
+		margin-right: 20px
 	.therapy-content
 		h2
 			text-align: center
@@ -11,6 +17,9 @@
 		img
 			margin-bottom: 30px
 @media (max-width: 991px) 
+	.therapy-text-content
+		margin-left: 0px
+		margin-right: 0px
 	.therapy-content
 		padding-left: 15px
 		padding-right: 15px
